--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     <div class="profile-glow"></div>
                     <div class="profile-avatar">
                         <div class="avatar-placeholder">
-                            <span>S</span>
+                            <img src="foto-shantika.jpg" alt="Foto Shantika" class="profile-photo">
                         </div>
                     </div>
-                    <div class="profile-stats">
+                    <div class="profile-avatar">
                         <div class="stat-item">
                             <span class="stat-number" data-count="3">0</span>
                             <span class="stat-label">Pengalaman</span>
@@ -547,3 +547,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
