--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     <div class="profile-glow"></div>
                     <div class="profile-avatar">
                         <div class="avatar-placeholder">
-                            <img src="foto-shantika.jpg" alt="Foto Shantika" class="profile-photo">
+                           <img src="foto-shantika.jpg alt="Foto Shantika" class="profile-photo">
+
                         </div>
                     </div>
                     <div class="profile-avatar">
@@ -547,4 +548,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
