--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
                 <div class="profile-card">
                     <div class="profile-glow"></div>
                     <div class="profile-avatar">
-                        <div class="avatar-placeholder">
-                           <img src="foto-shantika.jpg alt="Foto Shantika" class="profile-photo">
-
-                        </div>
+                        <img src="foto-shantika.jpg" alt="Foto Shantika" class="profile-photo">
+                    </div>
                     </div>
                     <div class="profile-avatar">
                         <div class="stat-item">
@@ -548,5 +546,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
