--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 <h2 class="section-title">Sertifikasi & Pelatihan</h2>
             </div>
             <div class="cert-grid">
-                <a href="https://drive.google.com/file/d/1DjxXbQweZhMdfnts13G2fIS1a8pskdDO/view?usp=sharing"
+                <a href="https://drive.google.com/file/d/1DjxXbQweZhMdfnts13G2fIS1a8pskdDO/view?usp=drive_link"
                     target="_blank" rel="noopener noreferrer" class="cert-card cert-card-link">
                     <div class="cert-icon bnsp">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
@@ -413,7 +413,8 @@
                     <span class="cert-type">Sertifikasi Nasional</span>
                     <span class="cert-view">Klik untuk melihat →</span>
                 </a>
-                <div class="cert-card">
+                <a href="https://drive.google.com/file/d/1f8NdkRx0XO1kdmms4k6Lu76k_m29f45i/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer" class="cert-card cert-card-link">
                     <div class="cert-icon toefl">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -427,8 +428,10 @@
                     <h4>TOEFL Certificate</h4>
                     <p>Bahasa Inggris</p>
                     <span class="cert-type">Valid 2025 - 2027</span>
-                </div>
-                <div class="cert-card">
+                    <span class="cert-view">Klik untuk melihat →</span>
+                </a>
+                <a href="https://drive.google.com/file/d/1YpoW00EfAVlzyv-zNnvJaGRnzrGsWZxy/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer" class="cert-card cert-card-link">
                     <div class="cert-icon magang">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -439,8 +442,10 @@
                     <h4>Sertifikat Magang</h4>
                     <p>PT. Angkasa Pura I Makassar</p>
                     <span class="cert-type">Pengalaman Industri</span>
-                </div>
-                <div class="cert-card">
+                    <span class="cert-view">Klik untuk melihat →</span>
+                </a>
+                <a href="https://drive.google.com/file/d/1wjg43NNmt8AVqEBsquubADi8zBogJoP7/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer" class="cert-card cert-card-link">
                     <div class="cert-icon komputer">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -452,8 +457,10 @@
                     <h4>Kursus Komputer</h4>
                     <p>Sertifikat Kompetensi Dasar</p>
                     <span class="cert-type">Pelatihan Profesional</span>
-                </div>
-                <div class="cert-card">
+                    <span class="cert-view">Klik untuk melihat →</span>
+                </a>
+                <a href="https://drive.google.com/file/d/1VeGgbKbdn-j4pW_DOvdulbf_e3YEY7Ae/view?usp=drive_link"
+                    target="_blank" rel="noopener noreferrer" class="cert-card cert-card-link">
                     <div class="cert-icon webinar">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -464,7 +471,8 @@
                     <h4>Webinar Desain Grafis</h4>
                     <p>& Seminar Nasional Teknologi Pendidikan</p>
                     <span class="cert-type">Pengembangan Diri</span>
-                </div>
+                    <span class="cert-view">Klik untuk melihat →</span>
+                </a>
             </div>
         </div>
     </section>
